# omap-flash-utils-for-ptxdist

./: .gitignore  CMakeLists.txt  MAINTAINER  README.md  barebox-envconfig  flash-image.sh  loadOnDevice.sh  loadOnDeviceAndFlashWithBarebox.sh  repair-to-jffs2.sh  repairToJFFS2
helpers/: barebox-flasher-image  flash-device.sh  load-on-device.sh
lib/: CMakeLists.txt  serial_posix.c
src/: CMakeLists.txt
